Fix labels gap issue.

--- a/public/styles/site/articles.less
+++ b/public/styles/site/articles.less
@@ -69,10 +69,10 @@
           left: 0;
           top: 0;
           line-height: 1;
+          .display-flex;
 
           .label {
             vertical-align: middle;
-            display: inline-block;
             background-color: #333;
             color: #FFF;
             padding: .3em .6em;
